--- a/notebooks/Random Forest Feature Selection.ipynb
+++ b/notebooks/Random Forest Feature Selection.ipynb
@@ -405,120 +405,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 1,
    "id": "249c074d",
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>feature</th>\n",
-       "      <th>feature importance</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>7</th>\n",
-       "      <td>spectral_rolloff_mean</td>\n",
-       "      <td>2.144076</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>11</th>\n",
-       "      <td>mfcc_2_mean</td>\n",
-       "      <td>0.573162</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>zero_crossings_mean</td>\n",
-       "      <td>0.396425</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>zero_crossings_var</td>\n",
-       "      <td>0.338289</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>8</th>\n",
-       "      <td>spectral_rolloff_var</td>\n",
-       "      <td>0.333497</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>20</th>\n",
-       "      <td>mfcc_6_var</td>\n",
-       "      <td>0.000033</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>65</th>\n",
-       "      <td>mfcc_29_mean</td>\n",
-       "      <td>0.000028</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>76</th>\n",
-       "      <td>mfcc_34_var</td>\n",
-       "      <td>0.000016</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>64</th>\n",
-       "      <td>mfcc_28_var</td>\n",
-       "      <td>0.000013</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>44</th>\n",
-       "      <td>mfcc_18_var</td>\n",
-       "      <td>0.0</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>89 rows × 2 columns</p>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "                  feature feature importance\n",
-       "7   spectral_rolloff_mean           2.144076\n",
-       "11            mfcc_2_mean           0.573162\n",
-       "3     zero_crossings_mean           0.396425\n",
-       "4      zero_crossings_var           0.338289\n",
-       "8    spectral_rolloff_var           0.333497\n",
-       "..                    ...                ...\n",
-       "20             mfcc_6_var           0.000033\n",
-       "65           mfcc_29_mean           0.000028\n",
-       "76            mfcc_34_var           0.000016\n",
-       "64            mfcc_28_var           0.000013\n",
-       "44            mfcc_18_var                0.0\n",
-       "\n",
-       "[89 rows x 2 columns]"
-      ]
-     },
-     "execution_count": 10,
-     "metadata": {},
-     "output_type": "execute_result"
+     "ename": "NameError",
+     "evalue": "name 'LinearRegression' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[1], line 4\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01msklearn\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01minspection\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m permutation_importance\n\u001b[0;32m----> 4\u001b[0m model \u001b[38;5;241m=\u001b[39m \u001b[43mLinearRegression\u001b[49m()\u001b[38;5;241m.\u001b[39mfit(X, y) \u001b[38;5;66;03m# Fit model\u001b[39;00m\n\u001b[1;32m      6\u001b[0m permutation_score \u001b[38;5;241m=\u001b[39m permutation_importance(model, X, y, n_repeats\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m100\u001b[39m) \u001b[38;5;66;03m# Perform Permutation\u001b[39;00m\n\u001b[1;32m      8\u001b[0m importance_df \u001b[38;5;241m=\u001b[39m pd\u001b[38;5;241m.\u001b[39mDataFrame(np\u001b[38;5;241m.\u001b[39mvstack((X\u001b[38;5;241m.\u001b[39mcolumns,\n\u001b[1;32m      9\u001b[0m                                         permutation_score\u001b[38;5;241m.\u001b[39mimportances_mean))\u001b[38;5;241m.\u001b[39mT) \u001b[38;5;66;03m# Unstack results\u001b[39;00m\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'LinearRegression' is not defined"
+     ]
     }
    ],
    "source": [
-    "\n",
+    "from sklearn.inspection import permutation_importance\n",
     "\n",
     "\n",
     "model = LinearRegression().fit(X, y) # Fit model\n",
