--- a/notebooks/Jamendo random forest.ipynb
+++ b/notebooks/Jamendo random forest.ipynb
@@ -2,13 +2,15 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 36,
    "id": "72a585c6",
    "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd\n",
     "import numpy as np\n",
+    "import os\n",
+    "import glob\n",
     "import matplotlib.pyplot as plt\n",
     "from sklearn.model_selection import train_test_split\n",
     "from sklearn.ensemble import RandomForestClassifier\n",
@@ -22,188 +24,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 46,
    "id": "1ff97f5d",
    "metadata": {},
    "outputs": [],
    "source": [
-    "data = pd.read_csv(\"../mcats/data/norm_jamendo_data.csv\")"
+    "a= pd.read_csv(\"../mcats/data/norm_jamendo_data.csv\n",
+    "b = pd.read_csv(\"../mcats/data/normalized_data.csv\")\n",
+    "b = b.dropna(axis=1)\n",
+    "merged = a.merge(b, on='genre')\n",
+    "merged.to_csv(\"output.csv\", index=False)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 45,
    "id": "65db5f4d",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>Unnamed: 0</th>\n",
-       "      <th>tempo</th>\n",
-       "      <th>beats_mean</th>\n",
-       "      <th>beats_var</th>\n",
-       "      <th>zero_crossings_mean</th>\n",
-       "      <th>zero_crossings_var</th>\n",
-       "      <th>spectral_centroids_mean</th>\n",
-       "      <th>spectral_centroids_var</th>\n",
-       "      <th>spectral_rolloff_mean</th>\n",
-       "      <th>spectral_rolloff_var</th>\n",
-       "      <th>...</th>\n",
-       "      <th>mfcc_36_var</th>\n",
-       "      <th>mfcc_37_mean</th>\n",
-       "      <th>mfcc_37_var</th>\n",
-       "      <th>mfcc_38_mean</th>\n",
-       "      <th>mfcc_38_var</th>\n",
-       "      <th>mfcc_39_mean</th>\n",
-       "      <th>mfcc_39_var</th>\n",
-       "      <th>mfcc_40_mean</th>\n",
-       "      <th>mfcc_40_var</th>\n",
-       "      <th>genre</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>KMR BND - SkeletBeatz - Twenty Eight Days.mp3</td>\n",
-       "      <td>1.018113</td>\n",
-       "      <td>0.135270</td>\n",
-       "      <td>0.180556</td>\n",
-       "      <td>-1.282956</td>\n",
-       "      <td>-1.412306</td>\n",
-       "      <td>-0.676326</td>\n",
-       "      <td>2.115854</td>\n",
-       "      <td>-0.462081</td>\n",
-       "      <td>3.433362</td>\n",
-       "      <td>...</td>\n",
-       "      <td>-0.827748</td>\n",
-       "      <td>0.256880</td>\n",
-       "      <td>-0.865114</td>\n",
-       "      <td>-1.180249</td>\n",
-       "      <td>-0.817053</td>\n",
-       "      <td>-0.215914</td>\n",
-       "      <td>-0.595622</td>\n",
-       "      <td>-0.043381</td>\n",
-       "      <td>-0.692133</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>chapardos - vrai.mp3</td>\n",
-       "      <td>-1.022612</td>\n",
-       "      <td>0.118673</td>\n",
-       "      <td>0.096810</td>\n",
-       "      <td>0.439562</td>\n",
-       "      <td>0.512986</td>\n",
-       "      <td>0.163186</td>\n",
-       "      <td>4.039769</td>\n",
-       "      <td>0.008108</td>\n",
-       "      <td>3.698887</td>\n",
-       "      <td>...</td>\n",
-       "      <td>0.463255</td>\n",
-       "      <td>-1.921676</td>\n",
-       "      <td>-0.826218</td>\n",
-       "      <td>0.442914</td>\n",
-       "      <td>-0.273238</td>\n",
-       "      <td>0.776645</td>\n",
-       "      <td>-0.737289</td>\n",
-       "      <td>-0.386016</td>\n",
-       "      <td>-0.421638</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>KMR BND - AO - Lamp.mp3</td>\n",
-       "      <td>1.018113</td>\n",
-       "      <td>-0.452742</td>\n",
-       "      <td>-0.189997</td>\n",
-       "      <td>0.100949</td>\n",
-       "      <td>0.157808</td>\n",
-       "      <td>0.562454</td>\n",
-       "      <td>0.841790</td>\n",
-       "      <td>0.359046</td>\n",
-       "      <td>0.968367</td>\n",
-       "      <td>...</td>\n",
-       "      <td>-0.802828</td>\n",
-       "      <td>1.485403</td>\n",
-       "      <td>-0.094997</td>\n",
-       "      <td>2.529697</td>\n",
-       "      <td>-0.053233</td>\n",
-       "      <td>1.407770</td>\n",
-       "      <td>-0.114887</td>\n",
-       "      <td>-1.010934</td>\n",
-       "      <td>-0.074881</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>3 rows × 91 columns</p>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "                                      Unnamed: 0     tempo  beats_mean  \\\n",
-       "0  KMR BND - SkeletBeatz - Twenty Eight Days.mp3  1.018113    0.135270   \n",
-       "1                           chapardos - vrai.mp3 -1.022612    0.118673   \n",
-       "2                        KMR BND - AO - Lamp.mp3  1.018113   -0.452742   \n",
-       "\n",
-       "   beats_var  zero_crossings_mean  zero_crossings_var  \\\n",
-       "0   0.180556            -1.282956           -1.412306   \n",
-       "1   0.096810             0.439562            0.512986   \n",
-       "2  -0.189997             0.100949            0.157808   \n",
-       "\n",
-       "   spectral_centroids_mean  spectral_centroids_var  spectral_rolloff_mean  \\\n",
-       "0                -0.676326                2.115854              -0.462081   \n",
-       "1                 0.163186                4.039769               0.008108   \n",
-       "2                 0.562454                0.841790               0.359046   \n",
-       "\n",
-       "   spectral_rolloff_var  ...  mfcc_36_var  mfcc_37_mean  mfcc_37_var  \\\n",
-       "0              3.433362  ...    -0.827748      0.256880    -0.865114   \n",
-       "1              3.698887  ...     0.463255     -1.921676    -0.826218   \n",
-       "2              0.968367  ...    -0.802828      1.485403    -0.094997   \n",
-       "\n",
-       "   mfcc_38_mean  mfcc_38_var  mfcc_39_mean  mfcc_39_var  mfcc_40_mean  \\\n",
-       "0     -1.180249    -0.817053     -0.215914    -0.595622     -0.043381   \n",
-       "1      0.442914    -0.273238      0.776645    -0.737289     -0.386016   \n",
-       "2      2.529697    -0.053233      1.407770    -0.114887     -1.010934   \n",
-       "\n",
-       "   mfcc_40_var  genre  \n",
-       "0    -0.692133      0  \n",
-       "1    -0.421638      0  \n",
-       "2    -0.074881      0  \n",
-       "\n",
-       "[3 rows x 91 columns]"
-      ]
-     },
-     "execution_count": 3,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "data.head(3)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 41,
    "id": "6343f2b8",
    "metadata": {},
    "outputs": [],
@@ -213,17 +58,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 11,
    "id": "d1ff2968",
    "metadata": {},
    "outputs": [],
    "source": [
-    "data=data.loc[::1]"
+    "#data=data.loc[::1]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 31,
    "id": "12971edf",
    "metadata": {},
    "outputs": [],
@@ -234,60 +79,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 32,
    "id": "6edb086b",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(995, 89)"
-      ]
-     },
-     "execution_count": 7,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "X.shape\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 33,
    "id": "3443292c",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "0       0\n",
-       "1       0\n",
-       "2       0\n",
-       "3       0\n",
-       "4       0\n",
-       "       ..\n",
-       "990    10\n",
-       "991    10\n",
-       "992    10\n",
-       "993    10\n",
-       "994    10\n",
-       "Name: genre, Length: 995, dtype: int64"
-      ]
-     },
-     "execution_count": 8,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "y"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 34,
    "id": "970ff3a7",
    "metadata": {},
    "outputs": [],
@@ -297,34 +109,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 25,
    "id": "70e8e61b",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "              precision    recall  f1-score   support\n",
-      "\n",
-      "      hiphop       1.00      1.00      1.00        62\n",
-      "   classical       1.00      0.97      0.99        74\n",
-      "       blues       1.00      1.00      1.00        59\n",
-      "  electronic       1.00      1.00      1.00        57\n",
-      "       metal       1.00      0.95      0.98        66\n",
-      "        jazz       0.98      1.00      0.99        54\n",
-      "     country       0.94      1.00      0.97        72\n",
-      "         pop       0.96      0.97      0.96        68\n",
-      "        rock       1.00      0.99      0.99        69\n",
-      "      reggae       1.00      0.98      0.99        65\n",
-      "\n",
-      "    accuracy                           0.99       646\n",
-      "   macro avg       0.99      0.99      0.99       646\n",
-      "weighted avg       0.99      0.99      0.99       646\n",
-      "\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "model_29 = RandomForestClassifier(n_estimators=186, max_features=31, max_depth=8,min_samples_leaf=1)  \n",
     "model_29.fit(X_train, y_train)\n",
