--- a/notebooks/logistic_regression.ipynb
+++ b/notebooks/logistic_regression.ipynb
@@ -913,7 +913,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "mcats",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -929,7 +929,19 @@
    "pygments_lexer": "ipython3",
    "version": "3.8.12"
   },
-  "orig_nbformat": 4,
+  "toc": {
+   "base_numbering": 1,
+   "nav_menu": {},
+   "number_sections": true,
+   "sideBar": true,
+   "skip_h1_title": false,
+   "title_cell": "Table of Contents",
+   "title_sidebar": "Contents",
+   "toc_cell": false,
+   "toc_position": {},
+   "toc_section_display": true,
+   "toc_window_display": false
+  },
   "vscode": {
    "interpreter": {
     "hash": "397d9a28ab4a6e85e35ce0d55713406ce11f741635260f280563d0bbbcf0741e"
