Waiting for new data

--- a/notebooks/KNN model.ipynb
+++ b/notebooks/KNN model.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 1,
    "id": "920d2da2",
    "metadata": {},
    "outputs": [],
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "id": "004fc0f5",
    "metadata": {},
    "outputs": [],
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "id": "99a34392",
    "metadata": {},
    "outputs": [],
@@ -43,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "id": "a030b94e",
    "metadata": {},
    "outputs": [],
@@ -54,7 +54,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 5,
    "id": "eb037292",
    "metadata": {},
    "outputs": [],
@@ -64,7 +64,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 6,
    "id": "1f7007c0",
    "metadata": {},
    "outputs": [],
@@ -74,7 +74,47 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 7,
+   "id": "fbcd5ca5",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "              precision    recall  f1-score   support\n",
+      "\n",
+      "      hiphop       0.60      0.67      0.63        79\n",
+      "   classical       0.85      0.81      0.83        86\n",
+      "       blues       0.36      0.55      0.44        74\n",
+      "       metal       0.75      0.51      0.61        76\n",
+      "        jazz       0.62      0.76      0.68        82\n",
+      "     country       0.55      0.61      0.58        76\n",
+      "         pop       0.58      0.53      0.55        79\n",
+      "        rock       0.53      0.48      0.50        84\n",
+      "       disco       0.65      0.33      0.43        80\n",
+      "      reggae       0.65      0.72      0.69        80\n",
+      "\n",
+      "    accuracy                           0.60       796\n",
+      "   macro avg       0.61      0.60      0.59       796\n",
+      "weighted avg       0.62      0.60      0.60       796\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "knn.fit(X_train, y_train)\n",
+    "preds = knn.predict(X_train)\n",
+    "#y_ true is y_test  predict on x_text  y_pred is the output of the model\n",
+    "y_true = y_train\n",
+    "y_pred = preds\n",
+    "target_names = ['hiphop', 'classical', 'blues', 'metal', 'jazz', 'country', 'pop', 'rock', 'disco', 'reggae']\n",
+    "print(classification_report(y_true, y_pred, target_names=target_names))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
    "id": "d714221a",
    "metadata": {},
    "outputs": [
@@ -114,7 +154,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 9,
    "id": "af70f36c",
    "metadata": {},
    "outputs": [
@@ -124,7 +164,7 @@
        "array([0.39375   , 0.39622642, 0.40880503, 0.35220126, 0.45283019])"
       ]
      },
-     "execution_count": 31,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
