Models on updated data

--- a/notebooks/Old Data Voting Classifiers.ipynb
+++ b/notebooks/Old Data Voting Classifiers.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 6,
    "id": "133ef986",
    "metadata": {},
    "outputs": [],
@@ -25,6 +25,7 @@
     "from sklearn.preprocessing import LabelEncoder\n",
     "from xgboost import XGBClassifier\n",
     "from catboost import CatBoostClassifier\n",
+    "from sklearn.neural_network import MLPClassifier\n",
     "from sklearn.inspection import permutation_importance\n",
     "from sklearn.metrics import accuracy_score\n",
     "from sklearn.metrics import classification_report\n",
@@ -33,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 7,
    "id": "d30e5196",
    "metadata": {},
    "outputs": [],
@@ -43,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 8,
    "id": "133c8185",
    "metadata": {},
    "outputs": [],
@@ -53,7 +54,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 9,
    "id": "bf366662",
    "metadata": {},
    "outputs": [
@@ -208,7 +209,7 @@
        "[3 rows x 90 columns]"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -219,7 +220,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 10,
    "id": "ad7fb443",
    "metadata": {},
    "outputs": [],
@@ -230,7 +231,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 11,
    "id": "711e330a",
    "metadata": {},
    "outputs": [
@@ -240,7 +241,7 @@
        "(1197, 89)"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -251,7 +252,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 12,
    "id": "62a55b74",
    "metadata": {},
    "outputs": [],
@@ -263,7 +264,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 13,
    "id": "7e6297e8",
    "metadata": {},
    "outputs": [
@@ -271,17 +272,17 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "LogisticRegression : 0.7774294670846394\n",
-      "ExtraTreesClassifier : 1.0\n",
-      "DecisionTree : 1.0\n",
-      "RandomForest : 1.0\n",
-      "Naive Bayes : 0.5454545454545454\n",
-      "KNeighbours : 0.6760710553814002\n",
-      "SVM : 0.7899686520376176\n",
-      "AdaBoostClassifier : 0.36990595611285265\n",
-      "GradientBoostingClassifier:  1.0\n",
-      "XGB : 1.0\n",
-      "CatBoost : 1.0\n"
+      "LogisticRegression : 0.5375\n",
+      "ExtraTreesClassifier : 0.55\n",
+      "DecisionTree : 0.38333333333333336\n",
+      "RandomForest : 0.5375\n",
+      "Naive Bayes : 0.45416666666666666\n",
+      "KNeighbours : 0.5\n",
+      "SVM : 0.575\n",
+      "AdaBoostClassifier : 0.32916666666666666\n",
+      "GradientBoostingClassifier:  0.5666666666666667\n",
+      "XGB : 0.6166666666666667\n",
+      "CatBoost : 0.6\n"
      ]
     }
    ],
@@ -302,13 +303,13 @@
     "for name,classifier in classifiers:\n",
     "    classifier = classifier\n",
     "    classifier.fit(X_train, y_train.ravel())\n",
-    "    predictions = classifier.predict(X_train)\n",
-    "    print(name, accuracy_score(y_train, predictions))"
+    "    predictions = classifier.predict(X_test)\n",
+    "    print(name, accuracy_score(y_test, predictions))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 14,
    "id": "dc4b5d1c",
    "metadata": {},
    "outputs": [
@@ -321,11 +322,11 @@
       "           0       0.87      0.89      0.88       123\n",
       "           1       0.93      0.97      0.95       115\n",
       "           2       0.77      0.68      0.72       117\n",
-      "           3       0.80      0.82      0.81       113\n",
+      "           3       0.79      0.82      0.81       113\n",
       "           4       0.77      0.84      0.81       121\n",
-      "           5       0.77      0.68      0.72       120\n",
-      "           6       0.78      0.81      0.80       120\n",
-      "           7       0.84      0.85      0.85       128\n",
+      "           5       0.78      0.68      0.72       120\n",
+      "           6       0.79      0.81      0.80       120\n",
+      "           7       0.84      0.85      0.84       128\n",
       "\n",
       "    accuracy                           0.82       957\n",
       "   macro avg       0.82      0.82      0.82       957\n",
@@ -346,7 +347,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 15,
    "id": "bf4cbb20",
    "metadata": {},
    "outputs": [
@@ -384,7 +385,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 16,
    "id": "3c258280",
    "metadata": {},
    "outputs": [
@@ -417,27 +418,27 @@
        "    <tr>\n",
        "      <th>6</th>\n",
        "      <td>spectral_centroids_var</td>\n",
-       "      <td>0.021061</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>13</th>\n",
-       "      <td>mfcc_3_mean</td>\n",
-       "      <td>0.012874</td>\n",
+       "      <td>0.022155</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>19</th>\n",
        "      <td>mfcc_6_mean</td>\n",
-       "      <td>0.012824</td>\n",
+       "      <td>0.013459</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>13</th>\n",
+       "      <td>mfcc_3_mean</td>\n",
+       "      <td>0.013066</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>15</th>\n",
        "      <td>mfcc_4_mean</td>\n",
-       "      <td>0.011896</td>\n",
+       "      <td>0.011462</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>5</th>\n",
-       "      <td>spectral_centroids_mean</td>\n",
-       "      <td>0.010418</td>\n",
+       "      <th>32</th>\n",
+       "      <td>mfcc_12_var</td>\n",
+       "      <td>0.009549</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>...</th>\n",
@@ -447,27 +448,27 @@
        "    <tr>\n",
        "      <th>24</th>\n",
        "      <td>mfcc_8_var</td>\n",
-       "      <td>-0.003734</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>46</th>\n",
-       "      <td>mfcc_19_var</td>\n",
-       "      <td>-0.00391</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>39</th>\n",
-       "      <td>mfcc_16_mean</td>\n",
-       "      <td>-0.00401</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>58</th>\n",
-       "      <td>mfcc_25_var</td>\n",
-       "      <td>-0.004854</td>\n",
+       "      <td>-0.003617</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>75</th>\n",
        "      <td>mfcc_34_mean</td>\n",
-       "      <td>-0.005054</td>\n",
+       "      <td>-0.004185</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>46</th>\n",
+       "      <td>mfcc_19_var</td>\n",
+       "      <td>-0.004336</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>58</th>\n",
+       "      <td>mfcc_25_var</td>\n",
+       "      <td>-0.004553</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>39</th>\n",
+       "      <td>mfcc_16_mean</td>\n",
+       "      <td>-0.005029</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -475,23 +476,23 @@
        "</div>"
       ],
       "text/plain": [
-       "                    feature feature importance\n",
-       "6    spectral_centroids_var           0.021061\n",
-       "13              mfcc_3_mean           0.012874\n",
-       "19              mfcc_6_mean           0.012824\n",
-       "15              mfcc_4_mean           0.011896\n",
-       "5   spectral_centroids_mean           0.010418\n",
-       "..                      ...                ...\n",
-       "24               mfcc_8_var          -0.003734\n",
-       "46              mfcc_19_var           -0.00391\n",
-       "39             mfcc_16_mean           -0.00401\n",
-       "58              mfcc_25_var          -0.004854\n",
-       "75             mfcc_34_mean          -0.005054\n",
+       "                   feature feature importance\n",
+       "6   spectral_centroids_var           0.022155\n",
+       "19             mfcc_6_mean           0.013459\n",
+       "13             mfcc_3_mean           0.013066\n",
+       "15             mfcc_4_mean           0.011462\n",
+       "32             mfcc_12_var           0.009549\n",
+       "..                     ...                ...\n",
+       "24              mfcc_8_var          -0.003617\n",
+       "75            mfcc_34_mean          -0.004185\n",
+       "46             mfcc_19_var          -0.004336\n",
+       "58             mfcc_25_var          -0.004553\n",
+       "39            mfcc_16_mean          -0.005029\n",
        "\n",
        "[89 rows x 2 columns]"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -515,7 +516,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 18,
    "id": "524c0fce",
    "metadata": {},
    "outputs": [
@@ -542,16 +543,25 @@
        "17                mfcc_5_mean\n",
        "18                 mfcc_5_var\n",
        "19                mfcc_6_mean\n",
+       "20                 mfcc_6_var\n",
+       "21                mfcc_7_mean\n",
+       "22                 mfcc_7_var\n",
+       "23                mfcc_8_mean\n",
+       "24                 mfcc_8_var\n",
+       "25                mfcc_9_mean\n",
+       "26                 mfcc_9_var\n",
+       "27               mfcc_10_mean\n",
+       "28                mfcc_10_var\n",
        "Name: feature, dtype: object"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "best_feature = importance_df.feature[0:20]\n",
+    "best_feature = importance_df.feature[0:29]\n",
     "best_feature "
    ]
   },
