--- a/notebooks/full jamendo data.ipynb
+++ b/notebooks/full jamendo data.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 2,
    "id": "c287966a",
    "metadata": {},
    "outputs": [
@@ -10,13 +10,13 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2023-03-02 19:54:45.773962: I tensorflow/core/platform/cpu_feature_guard.cc:193] This TensorFlow binary is optimized with oneAPI Deep Neural Network Library (oneDNN) to use the following CPU instructions in performance-critical operations:  AVX2 FMA\n",
+      "2023-03-04 12:35:43.537382: I tensorflow/core/platform/cpu_feature_guard.cc:193] This TensorFlow binary is optimized with oneAPI Deep Neural Network Library (oneDNN) to use the following CPU instructions in performance-critical operations:  AVX2 FMA\n",
       "To enable them in other operations, rebuild TensorFlow with the appropriate compiler flags.\n",
-      "2023-03-02 19:54:46.198310: W tensorflow/compiler/xla/stream_executor/platform/default/dso_loader.cc:64] Could not load dynamic library 'libcudart.so.11.0'; dlerror: libcudart.so.11.0: cannot open shared object file: No such file or directory\n",
-      "2023-03-02 19:54:46.198363: I tensorflow/compiler/xla/stream_executor/cuda/cudart_stub.cc:29] Ignore above cudart dlerror if you do not have a GPU set up on your machine.\n",
-      "2023-03-02 19:54:47.666855: W tensorflow/compiler/xla/stream_executor/platform/default/dso_loader.cc:64] Could not load dynamic library 'libnvinfer.so.7'; dlerror: libnvinfer.so.7: cannot open shared object file: No such file or directory\n",
-      "2023-03-02 19:54:47.667006: W tensorflow/compiler/xla/stream_executor/platform/default/dso_loader.cc:64] Could not load dynamic library 'libnvinfer_plugin.so.7'; dlerror: libnvinfer_plugin.so.7: cannot open shared object file: No such file or directory\n",
-      "2023-03-02 19:54:47.667017: W tensorflow/compiler/tf2tensorrt/utils/py_utils.cc:38] TF-TRT Warning: Cannot dlopen some TensorRT libraries. If you would like to use Nvidia GPU with TensorRT, please make sure the missing libraries mentioned above are installed properly.\n"
+      "2023-03-04 12:35:43.995441: W tensorflow/compiler/xla/stream_executor/platform/default/dso_loader.cc:64] Could not load dynamic library 'libcudart.so.11.0'; dlerror: libcudart.so.11.0: cannot open shared object file: No such file or directory\n",
+      "2023-03-04 12:35:43.995466: I tensorflow/compiler/xla/stream_executor/cuda/cudart_stub.cc:29] Ignore above cudart dlerror if you do not have a GPU set up on your machine.\n",
+      "2023-03-04 12:35:45.646099: W tensorflow/compiler/xla/stream_executor/platform/default/dso_loader.cc:64] Could not load dynamic library 'libnvinfer.so.7'; dlerror: libnvinfer.so.7: cannot open shared object file: No such file or directory\n",
+      "2023-03-04 12:35:45.646382: W tensorflow/compiler/xla/stream_executor/platform/default/dso_loader.cc:64] Could not load dynamic library 'libnvinfer_plugin.so.7'; dlerror: libnvinfer_plugin.so.7: cannot open shared object file: No such file or directory\n",
+      "2023-03-04 12:35:45.646394: W tensorflow/compiler/tf2tensorrt/utils/py_utils.cc:38] TF-TRT Warning: Cannot dlopen some TensorRT libraries. If you would like to use Nvidia GPU with TensorRT, please make sure the missing libraries mentioned above are installed properly.\n"
      ]
     }
    ],
@@ -27,6 +27,7 @@
     "import pandas as pd\n",
     "import numpy as np\n",
     "import tensorflow as tf\n",
+    "\n",
     "from sklearn.ensemble import VotingClassifier\n",
     "from sklearn.tree import DecisionTreeClassifier\n",
     "from sklearn.ensemble import RandomForestClassifier\n",
@@ -72,7 +73,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 4,
    "id": "125baef8",
    "metadata": {},
    "outputs": [],
@@ -82,7 +83,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 5,
    "id": "43a6f784",
    "metadata": {},
    "outputs": [],
@@ -92,7 +93,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 6,
    "id": "b2c47685",
    "metadata": {},
    "outputs": [],
@@ -102,7 +103,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 7,
    "id": "e2665898",
    "metadata": {},
    "outputs": [],
@@ -288,8 +289,100 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "id": "0ab3b891",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/root/.pyenv/versions/3.8.12/envs/mcats/lib/python3.8/site-packages/sklearn/linear_model/_logistic.py:1181: UserWarning: Setting penalty=None will ignore the C and l1_ratio parameters\n",
+      "  warnings.warn(\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "              precision    recall  f1-score   support\n",
+      "\n",
+      "           0       0.85      0.84      0.85       477\n",
+      "           1       0.91      0.94      0.93       437\n",
+      "           2       0.70      0.66      0.68       423\n",
+      "           3       0.80      0.77      0.78       424\n",
+      "           4       0.79      0.87      0.83       443\n",
+      "           5       0.79      0.70      0.74       450\n",
+      "           6       0.75      0.75      0.75       419\n",
+      "           7       0.80      0.86      0.83       457\n",
+      "\n",
+      "    accuracy                           0.80      3530\n",
+      "   macro avg       0.80      0.80      0.80      3530\n",
+      "weighted avg       0.80      0.80      0.80      3530\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "clf1 = LogisticRegression(max_iter=1000, C= 2, penalty = None, solver ='newton-cg')\n",
+    "clf2 = KNeighborsClassifier(weights='uniform', metric='manhattan', algorithm='kd_tree', n_neighbors=19)\n",
+    "clf3 = SVC(C= .50, gamma= 'scale', kernel='sigmoid', probability=True)\n",
+    "eclf1 = VotingClassifier(estimators=[('logistic', clf1), ('KNN', clf2), ('SVC', clf3)], voting='soft')\n",
+    "eclf1.fit(X_train, y_train)\n",
+    "predictions = eclf1.predict(X_train)\n",
+    "print(classification_report(y_train, predictions))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "4da84a0b",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/root/.pyenv/versions/3.8.12/envs/mcats/lib/python3.8/site-packages/sklearn/linear_model/_logistic.py:1181: UserWarning: Setting penalty=None will ignore the C and l1_ratio parameters\n",
+      "  warnings.warn(\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "              precision    recall  f1-score   support\n",
+      "\n",
+      "           0       0.55      0.67      0.61       114\n",
+      "           1       0.74      0.93      0.83       116\n",
+      "           2       0.44      0.40      0.42       148\n",
+      "           3       0.59      0.47      0.52       175\n",
+      "           4       0.57      0.75      0.65       169\n",
+      "           5       0.51      0.37      0.43       145\n",
+      "           6       0.58      0.46      0.52       168\n",
+      "           7       0.51      0.58      0.55       130\n",
+      "\n",
+      "    accuracy                           0.57      1165\n",
+      "   macro avg       0.56      0.58      0.56      1165\n",
+      "weighted avg       0.56      0.57      0.56      1165\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "clf1 = LogisticRegression(max_iter=1000, C= 2, penalty = None, solver ='newton-cg')\n",
+    "clf2 = KNeighborsClassifier(weights='uniform', metric='manhattan', algorithm='kd_tree', n_neighbors=19)\n",
+    "clf3 = SVC(C= .50, gamma= 'scale', kernel='sigmoid', probability=True)\n",
+    "eclf1 = VotingClassifier(estimators=[('logistic', clf1), ('KNN', clf2), ('SVC', clf3)], voting='soft')\n",
+    "eclf1.fit(X_train, y_train)\n",
+    "predictions = eclf1.predict(X_test)\n",
+    "print(classification_report(y_test, predictions))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "715b17a7",
    "metadata": {},
    "outputs": [],
    "source": []
