--- a/notebooks/Random Forest Feature Selection.ipynb
+++ b/notebooks/Random Forest Feature Selection.ipynb
@@ -405,36 +405,56 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "249c074d",
    "metadata": {},
    "outputs": [
     {
      "ename": "NameError",
-     "evalue": "name 'LinearRegression' is not defined",
+     "evalue": "name 'Pipeline' is not defined",
      "output_type": "error",
      "traceback": [
       "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[1], line 4\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01msklearn\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01minspection\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m permutation_importance\n\u001b[0;32m----> 4\u001b[0m model \u001b[38;5;241m=\u001b[39m \u001b[43mLinearRegression\u001b[49m()\u001b[38;5;241m.\u001b[39mfit(X, y) \u001b[38;5;66;03m# Fit model\u001b[39;00m\n\u001b[1;32m      6\u001b[0m permutation_score \u001b[38;5;241m=\u001b[39m permutation_importance(model, X, y, n_repeats\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m100\u001b[39m) \u001b[38;5;66;03m# Perform Permutation\u001b[39;00m\n\u001b[1;32m      8\u001b[0m importance_df \u001b[38;5;241m=\u001b[39m pd\u001b[38;5;241m.\u001b[39mDataFrame(np\u001b[38;5;241m.\u001b[39mvstack((X\u001b[38;5;241m.\u001b[39mcolumns,\n\u001b[1;32m      9\u001b[0m                                         permutation_score\u001b[38;5;241m.\u001b[39mimportances_mean))\u001b[38;5;241m.\u001b[39mT) \u001b[38;5;66;03m# Unstack results\u001b[39;00m\n",
-      "\u001b[0;31mNameError\u001b[0m: name 'LinearRegression' is not defined"
+      "Cell \u001b[0;32mIn[2], line 2\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01msklearn\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01minspection\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m permutation_importance\n\u001b[0;32m----> 2\u001b[0m rf \u001b[38;5;241m=\u001b[39m \u001b[43mPipeline\u001b[49m(\n\u001b[1;32m      3\u001b[0m     [\n\u001b[1;32m      4\u001b[0m         (\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mpreprocess\u001b[39m\u001b[38;5;124m\"\u001b[39m, preprocessing),\n\u001b[1;32m      5\u001b[0m         (\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mclassifier\u001b[39m\u001b[38;5;124m\"\u001b[39m, RandomForestClassifier(random_state\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m42\u001b[39m)),\n\u001b[1;32m      6\u001b[0m     ]\n\u001b[1;32m      7\u001b[0m )\n\u001b[1;32m      8\u001b[0m rf\u001b[38;5;241m.\u001b[39mfit(X_train, y_train)\n\u001b[1;32m      9\u001b[0m result \u001b[38;5;241m=\u001b[39m permutation_importance(\n\u001b[1;32m     10\u001b[0m     rf, X_test, y_test, n_repeats\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m10\u001b[39m, random_state\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m42\u001b[39m, n_jobs\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m2\u001b[39m\n\u001b[1;32m     11\u001b[0m )\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'Pipeline' is not defined"
      ]
     }
    ],
    "source": [
     "from sklearn.inspection import permutation_importance\n",
+    "rf = Pipeline(\n",
+    "    [\n",
+    "        (\"preprocess\", preprocessing),\n",
+    "        (\"classifier\", RandomForestClassifier(random_state=42)),\n",
+    "    ]\n",
+    ")\n",
+    "rf.fit(X_train, y_train)\n",
+    "result = permutation_importance(\n",
+    "    rf, X_test, y_test, n_repeats=10, random_state=42, n_jobs=2\n",
+    ")\n",
     "\n",
+    "sorted_importances_idx = result.importances_mean.argsort()\n",
+    "importances = pd.DataFrame(\n",
+    "    result.importances[sorted_importances_idx].T,\n",
+    "    columns=X.columns[sorted_importances_idx],\n",
+    ")\n",
+    "ax = importances.plot.box(vert=False, whis=10)\n",
+    "ax.set_title(\"Permutation Importances (test set)\")\n",
+    "ax.axvline(x=0, color=\"k\", linestyle=\"--\")\n",
+    "ax.set_xlabel(\"Decrease in accuracy score\")\n",
+    "ax.figure.tight_layout()\n",
     "\n",
-    "model = LinearRegression().fit(X, y) # Fit model\n",
+    "# model = LinearRegression().fit(X, y) # Fit model\n",
     "\n",
-    "permutation_score = permutation_importance(model, X, y, n_repeats=100) # Perform Permutation\n",
+    "# permutation_score = permutation_importance(model, X, y, n_repeats=100) # Perform Permutation\n",
     "\n",
-    "importance_df = pd.DataFrame(np.vstack((X.columns,\n",
-    "                                        permutation_score.importances_mean)).T) # Unstack results\n",
+    "# importance_df = pd.DataFrame(np.vstack((X.columns,\n",
+    "#                                         permutation_score.importances_mean)).T) # Unstack results\n",
     "\n",
-    "importance_df.columns=['feature','feature importance'] # Change column names\n",
+    "# importance_df.columns=['feature','feature importance'] # Change column names\n",
     "\n",
-    "importance_df.sort_values(by=\"feature importance\", ascending = False) # Order by importance"
+    "# importance_df.sort_values(by=\"feature importance\", ascending = False) # Order by importance"
    ]
   },
   {
