--- a/notebooks/Stacking Classifiesrs.ipynb
+++ b/notebooks/Stacking Classifiesrs.ipynb
@@ -2,17 +2,15 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 1,
    "id": "0e13ca86",
    "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd\n",
-    "from sklearn.ensemble import RandomForestClassifier\n",
-    "from sklearn.svm import LinearSVC\n",
     "from sklearn.linear_model import LogisticRegression\n",
+    "from sklearn.svm import SVC\n",
     "from sklearn.neighbors import KNeighborsClassifier\n",
-    "from xgboost import XGBClassifier\n",
     "from sklearn.pipeline import make_pipeline\n",
     "from sklearn.ensemble import StackingClassifier\n",
     "from sklearn.model_selection import train_test_split\n",
@@ -22,94 +20,61 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "d40c3123",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "data = pd.read_csv(\"../mcats/data/norm_jamendo_data.csv\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "id": "95b77de5",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "data = data.drop(\"Unnamed: 0\", axis =1)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "id": "e5239790",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "X = data.drop(columns = \"genre\")\n",
-    "y = data[\"genre\"]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 26,
    "id": "bbdbac98",
    "metadata": {},
    "outputs": [],
    "source": [
     "\n",
-    "le = LabelEncoder()\n",
-    "y = le.fit_transform(y)"
+    "# le = LabelEncoder()\n",
+    "# y = le.fit_transform(y)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 3,
    "id": "61248a7d",
    "metadata": {},
    "outputs": [],
    "source": [
-    "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.3, random_state=42)"
+    "# Load the data splits\n",
+    "train_data = pd.read_csv('../mcats/data/train_data.csv')\n",
+    "val_data = pd.read_csv('../mcats/data/test_data.csv')\n",
+    "test_data = pd.read_csv('../mcats/data/val_data.csv')\n",
+    "\n",
+    "# Split the data into X and y\n",
+    "X_train = train_data.iloc[:, 1:-1]\n",
+    "y_train = train_data.iloc[:, -1]\n",
+    "X_val = val_data.iloc[:, 1:-1]\n",
+    "y_val = val_data.iloc[:, -1]\n",
+    "X_test = test_data.iloc[:, 1:-1]\n",
+    "y_test = test_data.iloc[:, -1]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 4,
    "id": "95bb7bae",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/root/.pyenv/versions/3.8.12/envs/mcats/lib/python3.8/site-packages/xgboost/sklearn.py:1395: UserWarning: `use_label_encoder` is deprecated in 1.7.0.\n",
-      "  warnings.warn(\"`use_label_encoder` is deprecated in 1.7.0.\")\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "forest = RandomForestClassifier(n_estimators=100,\n",
-    "                                random_state=42)\n",
+    "svm = SVC(C= .1, gamma= 'scale', kernel='rbf', probability=True)\n",
     "\n",
-    "neigh = KNeighborsClassifier(n_neighbors=5)\n",
+    "neigh = KNeighborsClassifier(weights='uniform', metric='manhattan', algorithm='kd_tree', n_neighbors=19)\n",
     "# Create a Logistic regression classifier\n",
     "#\n",
-    "lgclassifier = LogisticRegression(max_iter=300, random_state=42)\n",
-    "\n",
-    "boost = XGBClassifier(random_state=123, verbosity=0, use_label_encoder=False)"
+    "lgclassifier = LogisticRegression(max_iter=1000, C= 2, penalty = None, solver ='newton-cg')\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 5,
    "id": "810cd84d",
    "metadata": {},
    "outputs": [],
    "source": [
     "estimators = [\n",
-    "     ('rf', forest),\n",
+    "     ('svm', svm),\n",
     "    ('knn', neigh),\n",
-    "    ('XGBboost', boost),\n",
     "    ('log', lgclassifier)]\n",
     "\n",
     "sclf = StackingClassifier(estimators=estimators,\n",
@@ -119,7 +84,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 7,
    "id": "70c8495e",
    "metadata": {},
    "outputs": [
@@ -127,20 +92,20 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Random forest model training Accuracy: 1.00\n",
-      "Random forest model test Accuracy: 0.45\n"
+      "Random forest model training Accuracy: 0.70\n",
+      "Random forest model test Accuracy: 0.56\n"
      ]
     }
    ],
    "source": [
-    "forest.fit(X_train, y_train)\n",
-    "print(f\"Random forest model training Accuracy: {forest.score(X_train, y_train):0.2f}\")\n",
-    "print(f\"Random forest model test Accuracy: {forest.score(X_test, y_test):0.2f}\")"
+    "svm.fit(X_train, y_train)\n",
+    "print(f\"Random forest model training Accuracy: {svm.score(X_train, y_train):0.2f}\")\n",
+    "print(f\"Random forest model test Accuracy: {svm.score(X_test, y_test):0.2f}\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 8,
    "id": "8ed8e010",
    "metadata": {},
    "outputs": [
@@ -149,8 +114,8 @@
      "output_type": "stream",
      "text": [
       "\n",
-      "KNN model training Accuracy: 0.59\n",
-      "KNN model test Accuracy: 0.37\n"
+      "KNN model training Accuracy: 0.76\n",
+      "KNN model test Accuracy: 0.55\n"
      ]
     }
    ],
@@ -162,29 +127,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
-   "id": "21739f10",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n",
-      "XGBoost model training Accuracy: 1.00\n",
-      "XGBoost model test Accuracy: 0.47\n"
-     ]
-    }
-   ],
-   "source": [
-    "boost.fit(X_train, y_train)\n",
-    "print(f\"\\nXGBoost model training Accuracy: {boost.score(X_train, y_train):0.2f}\")\n",
-    "print(f\"XGBoost model test Accuracy: {boost.score(X_test, y_test):0.2f}\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 9,
    "id": "88c7e638",
    "metadata": {},
    "outputs": [
@@ -192,12 +135,30 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/root/.pyenv/versions/3.8.12/envs/mcats/lib/python3.8/site-packages/xgboost/sklearn.py:1395: UserWarning: `use_label_encoder` is deprecated in 1.7.0.\n",
-      "  warnings.warn(\"`use_label_encoder` is deprecated in 1.7.0.\")\n",
-      "/root/.pyenv/versions/3.8.12/envs/mcats/lib/python3.8/site-packages/xgboost/sklearn.py:1395: UserWarning: `use_label_encoder` is deprecated in 1.7.0.\n",
-      "  warnings.warn(\"`use_label_encoder` is deprecated in 1.7.0.\")\n",
-      "/root/.pyenv/versions/3.8.12/envs/mcats/lib/python3.8/site-packages/xgboost/sklearn.py:1395: UserWarning: `use_label_encoder` is deprecated in 1.7.0.\n",
-      "  warnings.warn(\"`use_label_encoder` is deprecated in 1.7.0.\")\n"
+      "/root/.pyenv/versions/3.8.12/envs/mcats/lib/python3.8/site-packages/sklearn/linear_model/_logistic.py:1181: UserWarning: Setting penalty=None will ignore the C and l1_ratio parameters\n",
+      "  warnings.warn(\n",
+      "/root/.pyenv/versions/3.8.12/envs/mcats/lib/python3.8/site-packages/sklearn/linear_model/_logistic.py:1181: UserWarning: Setting penalty=None will ignore the C and l1_ratio parameters\n",
+      "  warnings.warn(\n",
+      "/root/.pyenv/versions/3.8.12/envs/mcats/lib/python3.8/site-packages/sklearn/linear_model/_logistic.py:1181: UserWarning: Setting penalty=None will ignore the C and l1_ratio parameters\n",
+      "  warnings.warn(\n",
+      "/root/.pyenv/versions/3.8.12/envs/mcats/lib/python3.8/site-packages/sklearn/linear_model/_logistic.py:1181: UserWarning: Setting penalty=None will ignore the C and l1_ratio parameters\n",
+      "  warnings.warn(\n",
+      "/root/.pyenv/versions/3.8.12/envs/mcats/lib/python3.8/site-packages/sklearn/linear_model/_logistic.py:1181: UserWarning: Setting penalty=None will ignore the C and l1_ratio parameters\n",
+      "  warnings.warn(\n",
+      "/root/.pyenv/versions/3.8.12/envs/mcats/lib/python3.8/site-packages/sklearn/linear_model/_logistic.py:1181: UserWarning: Setting penalty=None will ignore the C and l1_ratio parameters\n",
+      "  warnings.warn(\n",
+      "/root/.pyenv/versions/3.8.12/envs/mcats/lib/python3.8/site-packages/sklearn/linear_model/_logistic.py:1181: UserWarning: Setting penalty=None will ignore the C and l1_ratio parameters\n",
+      "  warnings.warn(\n",
+      "/root/.pyenv/versions/3.8.12/envs/mcats/lib/python3.8/site-packages/sklearn/linear_model/_logistic.py:1181: UserWarning: Setting penalty=None will ignore the C and l1_ratio parameters\n",
+      "  warnings.warn(\n",
+      "/root/.pyenv/versions/3.8.12/envs/mcats/lib/python3.8/site-packages/sklearn/linear_model/_logistic.py:1181: UserWarning: Setting penalty=None will ignore the C and l1_ratio parameters\n",
+      "  warnings.warn(\n",
+      "/root/.pyenv/versions/3.8.12/envs/mcats/lib/python3.8/site-packages/sklearn/linear_model/_logistic.py:1181: UserWarning: Setting penalty=None will ignore the C and l1_ratio parameters\n",
+      "  warnings.warn(\n",
+      "/root/.pyenv/versions/3.8.12/envs/mcats/lib/python3.8/site-packages/sklearn/linear_model/_logistic.py:1181: UserWarning: Setting penalty=None will ignore the C and l1_ratio parameters\n",
+      "  warnings.warn(\n",
+      "/root/.pyenv/versions/3.8.12/envs/mcats/lib/python3.8/site-packages/sklearn/linear_model/_logistic.py:1181: UserWarning: Setting penalty=None will ignore the C and l1_ratio parameters\n",
+      "  warnings.warn(\n"
      ]
     },
     {
@@ -205,8 +166,8 @@
      "output_type": "stream",
      "text": [
       "\n",
-      "Stacking classifier training Accuracy: 0.94\n",
-      "Stacking classifier test Accuracy: 0.46\n"
+      "Stacking classifier training Accuracy: 0.87\n",
+      "Stacking classifier test Accuracy: 0.56\n"
      ]
     }
    ],
